--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -33,4 +32,9 @@ models:
   dbtlearn:
     # Config indicated by + and applies to all files under models/example/
     # example:
-    #   +materialized: view
+    +materialized: view
+    +schema: dbt_aman
+    dim:
+      +materialized: table
+    src:
+      +materialized: ephemeral
